...
        return name(for: node.name)
    }

    static func name(for name: String) -> String {
        switch name {
        case "早餐", "午餐晚餐": return "fork.knife"
        case "咖啡茶饮": return "cup.and.saucer"
        case "零食": return "carrot"
        case "水果": return "leaf"
        case "外卖", "日用百货": return "bag"
        case "饮品": return "cup.and.saucer"
        case "买菜": return "basket"
        case "甜品": return "birthday.cake"
...
